@startuml rides-microservice-domain-model

title Rides microservice domain model

class Ride {
    eBikeId: EBikeId
    username: Username
    start: DateTime
    end: DateTime?
}
struct RideId {
    value: String
}
Ride "1" -u-> "id 1" RideId

class RidesRepository <<Repository>>
RidesRepository o-l- Ride

class RidesService <<Service>> {
    find(rideId: RideId): Ride?
    activeRides(): Iterable<Ride>
    startRide(eBikeId: EBikeId, username: Username): Future<Either<StartRideError, Ride>>
    endRide(id: RideId): Future<Either<RideNotFound, Ride>>
    availableEBikes(): Future<Iterable<EBikeId>>
    ..
    healthCheckError(): Option<String>
}

RidesService --> RidesRepository : "uses"

class EBikesService <<Service>>
RidesService --> EBikesService : "uses"

class UsersService <<Service>>
RidesService --> UsersService : "uses"

interface StartRideError

interface UserOrEBikeAlreadyOnARide extends StartRideError
struct UserAlreadyOnARide extends UserOrEBikeAlreadyOnARide
struct EBikeAlreadyOnARide extends UserOrEBikeAlreadyOnARide

interface UserOrEBikeNotExist extends StartRideError
struct UserNotExist extends UserOrEBikeNotExist
struct EBikeNotExist extends UserOrEBikeNotExist

hide empty members

@enduml
